# Robert

./: .gitignore  CMakeLists.txt  README.md
Service/: CMakeLists.txt
Service/doc/: README.md
Service/etc/: config.json
Service/include/: Acceptor.h  CaptureStream.h  Connection.h  Epoller.h  IPFilter.h  InferenceWorker.h  Pool.h  ServiceConnection.h  ThreadPool.h  Yolo.h
Service/src/: CaptureStream.cpp  Connection.cpp  IPFilter.cpp  InferenceWorker.cpp  ServiceConnection.cpp  Yolo.cpp  main.cpp
Terminal/: CMakeLists.txt
Terminal/etc/: config.json
Terminal/include/: ConfigPage.h  HomePage.h  LoginForm.h  SolutionItem.h  VideoWidget.h  YoloConfigPage.h
Terminal/include/editor/: BaseModel.h  ContactMissionModel.h  DirectedDistanceMissionModel.h  DistanceMissionModel.h  Editor.h  ItemModel.h  PoseModel.h  QRowButton.h  QRowComboBox.h  QRowEdit.h  Scene.h  SettlementModel.h  StayMissionModel.h
Terminal/resources/: resource.qrc
Terminal/src/: ConfigPage.cpp  ConfigPage.ui  HomePage.cpp  HomePage.ui  LoginForm.cpp  LoginForm.ui  SolutionItem.cpp  SolutionItem.ui  VideoWidget.cpp  VideoWidget.ui  YoloConfigPage.cpp  YoloConfigPage.ui  main.cpp
Terminal/src/editor/: BaseModel.cpp  ContactMissionModel.cpp  DirectedDistanceMissionModel.cpp  DistanceMissionModel.cpp  Editor.cpp  Editor.ui  ItemModel.cpp  PoseModel.cpp  QRowButton.cpp  QRowButton.ui  QRowComboBox.cpp  QRowComboBox.ui  QRowEdit.cpp  QRowEdit.ui  Scene.cpp  SettlementModel.cpp  StayMissionModel.cpp
Terminal/ui/: HomePage.ui  SolutionItem.ui
Utils/: CMakeLists.txt
Utils/include/: AsyncLogger.h  Channel.h  Configure.h  Interflow.h  Socket.h
Utils/include/MissionReactor/: Item.h  MissionFactory.h  MissionImpl.h  MissionInterface.h  MissionPacker.h  MissionReactor.h
Utils/src/: AsyncLogger.cpp  Channel.cpp  Configure.cpp  Interflow.cpp  Socket.cpp
Utils/src/MissionReactor/: Item.cpp  MissionFactory.cpp  MissionImpl.cpp  MissionInterface.cpp  MissionPacker.cpp  MissionReactor.cpp
